# NWSpeech

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package_release.ps1
3rd/sherpa-onnx/include/sherpa-onnx/c-api/: cxx-api.h
3rd/sherpa-onnx/lib/debug/: onnxruntime.lib  sherpa-onnx-c-api.lib  sherpa-onnx-cxx-api.lib
3rd/sherpa-onnx/lib/release/: sherpa-onnx-c-api.lib  sherpa-onnx-cxx-api.lib
models/: silero_vad.onnx
models/streaming-zipformer/: decoder.onnx  encoder.onnx  joiner.onnx
src/: config.cpp  config.h  main.cpp
src/core/: audio_capture.cpp  audio_capture.h  audio_resampler.cpp  audio_resampler.h  file_saver.cpp  file_saver.h  speech_recognizer.cpp  speech_recognizer.h  voice_activity_detector.cpp  voice_activity_detector.h
src/service/: llm_optimizer.cpp  llm_optimizer.h  offline_recognition_service.cpp  offline_recognition_service.h  speech_recognition_service.cpp  speech_recognition_service.h
src/ui/: floating_window.cpp  floating_window.h  main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h
